--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -9,6 +9,9 @@
   <body>
     <h1 id="title">freeCodeCamp Survey Form</h1>
     <p id="description">Thank you for taking the time to help us improve the platform</p>
+    <form id="survey-form">
+      <input type="text" id="name" name="name" placeholder="Enter your name">
+    </form>
      
 
 
