Story 5 and 6 added

--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -11,6 +11,7 @@
     <p id="description">Thank you for taking the time to help us improve the platform</p>
     <form id="survey-form">
       <input type="text" id="name" name="name" placeholder="Enter your name">
+      <input type="email" id="email" placeholder="Enter you Email" required>
     </form>
      
 
