--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -10,9 +10,12 @@
     <h1 id="title">freeCodeCamp Survey Form</h1>
     <p id="description">Thank you for taking the time to help us improve the platform</p>
     <form id="survey-form">
+      <label for="name" id="name-label">Name</label>
       <input type="text" id="name" name="name" placeholder="Enter your name">
+      <label for="email" id="email-label">Email</label>
       <input type="email" id="email" placeholder="Enter you Email">
-      <input type="number" id="number">
+      <label for="number" id="number-label">Age (optional)</label>
+      <input type="number" id="number" min="18" max="99">
 
 
     </form>
