--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -15,7 +15,15 @@
       <label for="email" id="email-label">Email</label>
       <input type="email" id="email" placeholder="Enter you Email">
       <label for="number" id="number-label">Age (optional)</label>
-      <input type="number" id="number" min="18" max="99">
+      <input type="number" id="number" min="18" max="99" placeholder="Age">
+      <select name="" id="dropdown">
+        <option value="" selected disabled>Select current role</option>
+        <option value="">Student</option>
+        <option value="">Full time job</option>
+        <option value="">Full time learner</option>
+        <option value="">Prefer not to say</option>
+        <option value="">other</option>
+      </select>
 
 
     </form>
