--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -24,7 +24,36 @@
         <option value="">Prefer not to say</option>
         <option value="">other</option>
       </select>
+      
+      <input type="radio" name="menu" value="Definetly">
+      <label for="menu">Definetly</label>
+      <input type="radio" name="menu" value="Maybe">
+      <label for="menu">Maybe</label>
+      <input type="radio" name="menu" value="Not sure">
+      <label for="menu">Not sure</label>
 
+      <input type="checkbox" name="" id=""value="1"> 
+      <label for="">Back-end Projects</label>
+      <input type="checkbox" name="" id="" value="2">
+      <label for="">Front-end Projects</label>
+      <input type="checkbox" name="" id="" value="3">
+      <label for="">Data Visualization</label>
+      <input type="checkbox" name="" id="" value="4">
+      <label for="">Challenges</label>
+      <input type="checkbox" name="" id="" value="5">
+      <label for="">Open Source Community</label>
+      <input type="checkbox" name="" id="" value="6">
+      <label for="">Gitter help rooms</label>
+      <input type="checkbox" name="" id="" value="7">
+      <label for="">Videos</label>
+      <input type="checkbox" name="" id="" value="8">
+      <label for="">City Meetups</label>
+      <input type="checkbox" name="" id="" value="9">
+      <label for="">Wiki</label>
+      <input type="checkbox" name="" id="" value="10">
+      <label for="">Forum</label>
+      <input type="checkbox" name="" id="" value="11">
+      <label for="">Additional Courses</label>
 
     </form>
      
