--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -10,10 +10,10 @@
     <h1 id="title">freeCodeCamp Survey Form</h1>
     <p id="description">Thank you for taking the time to help us improve the platform</p>
     <form id="survey-form">
-      <label for="name" id="name-label">Name</label>
-      <input type="text" id="name" name="name" placeholder="Enter your name">
+      <label for="name" id="name-label" >Name</label>
+      <input type="text" id="name" name="name" placeholder="Enter your name" required>
       <label for="email" id="email-label">Email</label>
-      <input type="email" id="email" placeholder="Enter you Email">
+      <input type="email" id="email" placeholder="Enter you Email" required>
       <label for="number" id="number-label">Age (optional)</label>
       <input type="number" id="number" min="18" max="99" placeholder="Age">
       <select name="" id="dropdown">
@@ -54,6 +54,9 @@
       <label for="">Forum</label>
       <input type="checkbox" name="" id="" value="11">
       <label for="">Additional Courses</label>
+
+      <textarea placeholder="Enter your comment here..." rows="4" cols="50"></textarea>
+      <input id="submit" type="submit" value="Submit">
 
     </form>
      
